mycat至zk的数据基本的加载入库已经完成！并且可以在失败后，全部将节点回溯