@@ -1,9 +1,7 @@
 package io.mycat.config.loader.zookeeper.create.comm;
 
-import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Map;
 
 /**
  * 进行核心的责伤链流程存放
@@ -26,15 +24,10 @@ public class SeqLinkedList {
     /**
      * 定义回退流程操作
      */
-    private List<ServiceExecInf> rollBackList = new LinkedList<ServiceExecInf>();
+    private LinkedList<ServiceExecInf> rollBackList = new LinkedList<ServiceExecInf>();
 
     /**
-     * 用来存放参数的集合
-     */
-    private Map<String, Object> param = new HashMap<String, Object>();
-
-    /**
-     * zk公共操作
+     * zk公共操作信息
     * @字段说明 zkProcess
     */
     private ZkProcessBase zkProcess = new ZkProcessBase();
@@ -86,48 +79,6 @@ public class SeqLinkedList {
     }
 
     /**
-     * 添加单参数
-    * 方法描述
-    * @param key
-    * @param value
-    * @创建日期 2016年6月19日
-    */
-    public void putParam(String key, Object value) {
-        this.param.put(key, value);
-    }
-
-    /**
-     * 添加多参数Map集合
-    * 方法描述
-    * @param map
-    * @创建日期 2016年6月19日
-    */
-    public void putMap(Map<String, Object> map) {
-        this.param.putAll(map);
-    }
-
-    /**
-     * 获得单个对象key的值
-    * 方法描述
-    * @param key
-    * @return
-    * @创建日期 2016年6月19日
-    */
-    public Object getValue(String key) {
-        return param.get(key);
-    }
-
-    /**
-     * 获得整个Map对象
-    * 方法描述
-    * @return
-    * @创建日期 2016年6月19日
-    */
-    public Map<String, Object> getParam() {
-        return param;
-    }
-
-    /**
      * 执行下一个流程代码
      * 
      * @return
@@ -138,6 +89,8 @@ public class SeqLinkedList {
         if (null != linkedServ && linkedServ.size() > 0) {
 
             ServiceExecInf servExec = linkedServ.remove(0);
+            
+            rollBackList.addFirst(servExec);
 
             return servExec.invoke(this);
         } else {
@@ -153,8 +106,8 @@ public class SeqLinkedList {
      */
     public boolean rollExec() throws Exception {
         if (null != rollBackList && rollBackList.size() > 0) {
-
-            ServiceExecInf rollExec = rollBackList.remove(0);
+            //倒序执行
+            ServiceExecInf rollExec = rollBackList.removeFirst();
 
             return rollExec.rollBackInvoke(this);
         } else {
